# time-tracker4-refactored

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  __dump_notes.py  __dump_section.py  agents.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
DesktopPythonInteractive/: hardware_item_add.py
alembic/: env.py
app/: __init__.py  client_table.json  main.py  roster.json  settings.py
app/core/: barcodes.py  config.py  errors.py  jinja.py  logging.py  security.py  settings.py  ticket_types.py
app/crud/: hardware.py  inventory.py  known_items.py  projects.py  tickets.py
app/db/: migrate.py  session.py
app/middlewares/: __init__.py  request_id.py  security_headers.py
app/models/: hardware.py  inventory.py  known_items.py  project.py  ticket.py
app/routers/: address.py  api_auth.py  api_hardware.py  api_inventory.py  api_projects.py  api_tickets.py  auth_ui.py  clients.py  ui.py
app/schemas/: auth.py  hardware.py  inventory.py  project.py  route.py  ticket.py
app/services/: address.py  clientsync.py  custom_attributes.py  reporting.py  route_export.py  timecalc.py
app/static/: app.css
app/templates/: _hardware_records.html  _hardware_rows.html  _row.html  (+15 more)
data/: client_table.json  data.db
docker/: Dockerfile
swift_files/: ContentView.swift  MyApp.swift  ScannerView.swift  WebView.swift  WrapperApp.swift
tests/: test_health.py  test_inventory.py  test_projects.py  test_reporting.py  test_route_export.py  test_tickets.py
