[metadata]
name = time-tracker
version = 0.1.0

[options]
packages = find:
include_package_data = True
install_requires =
    fastapi>=0.115
    uvicorn[standard]>=0.30
    jinja2>=3.1
    pydantic>=2.7
    pydantic-settings>=2.2
    sqlalchemy>=2.0
    alembic>=1.13
    psycopg2-binary>=2.9; platform_system != "Windows"
    psycopg>=3.2; platform_system == "Windows"
    python-multipart>=0.0.9
    itsdangerous>=2.2
    passlib[bcrypt]>=1.7
    httpx>=0.27
    structlog>=24.1
    prometheus-fastapi-instrumentator>=7.0.0

[options.extras_require]
dev =
    pytest>=8.2
    pytest-asyncio>=0.23
    pytest-cov>=5.0
    factory_boy>=3.3
    mypy>=1.11
    ruff>=0.6
    black>=24.8
    bandit>=1.7
    types-python-dateutil
